--- a/packages/components/src/sender/vars.less
+++ b/packages/components/src/sender/vars.less
@@ -50,7 +50,7 @@
   --tr-sender-template-field-min-width: 2em;
   --tr-sender-template-field-min-width-empty: 3em;
   --tr-sender-template-field-min-height-empty: 24px;
-  --tr-sender-template-field-line-height: 16px;
+  --tr-sender-template-field-line-height: 26px;
   --tr-sender-template-field-color: #1476FF;
   --tr-sender-template-field-placeholder-color: #A6CAFD;
   --tr-sender-template-field-placeholder-left: 8px;
